# RemoteSC

./: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go
cmd/: configure.go
pkcs11/: CMakeLists.txt  lib.c  utils.c  utils.h
rpkcs11/: CMakeLists.txt  http.c  http.h  lib.c  pkcs11.h  utils.c  utils.h
server/: handler.go  pkcs11_api.c  pkcs11_api.go  pkcs11_api.h  pkcs11_test.go  runner.go  types.go
